# vibecheck

./: .gitignore  AGENTS.md  FRONTEND-WORKLOG.md  README.md  REVIEW-PROCESS.md  WORKLOG.md  pyproject.toml
demo/: COMPETITIVE-ANALYSIS.md  JUDGING-CRITERIA.md  android-mirroring.sh  slides.md
demo/slides/: checkmark-preview.sh  logo-pixel-preview.sh  logo-preview.sh  logo-svg-preview.sh  logo-svg-preview2.sh  vibecheck-banner.sh
docs/: ANALYSIS-session-attachment.md  ANALYSIS-vibe.md  CLAUDE_OUTPUT.md  DEMO.md  FRONTEND-PROTOTYPE-IMPLEMENTATION-AUDIO.md  FRONTEND-PROTOTYPE-IMPLEMENTATION-VISUAL.md  FRONTEND-PROTOTYPE-IMPLEMENTATION.md  FRONTEND-PROTOTYPE-PLAN-AUDIO.md  FRONTEND-PROTOTYPE-PLAN-VISUAL.md  FRONTEND-PROTOTYPE-PLAN.md  FRONTEND-WORKLOG-AUDIO.md  FRONTEND-WORKLOG-VISUAL.md  FRONTEND-WORKLOG.md  IMPLEMENTATION.md  PHASE0-DECISIONS.md  PLAN-gap2.md  PLAN.md  REFERENCE-push-notifications.md  REMOTING-UI.md  TODO.md  USING-VIBE.md  VIBE-REVIEW.md
frontend-prototype/: .gitignore  MOBILE-QA-CHECKLIST.md  README.md
prototypes/: .gitignore  README.md
resources/: Mistral Hackathon - NVIDIA briefing.md  Mistral-Meeting-pre-meeting.md  elevenlabs.md  wandb.md
scripts/: generate_test_audio.py  probe_live_vibe_session.py  requirements.txt  test_all.sh  test_devstral2.py  test_live_attach.sh  test_ministral8b.py  test_mistral_large3.py  test_mistral_small.py  test_voxtral_realtime.py  test_voxtral_transcribe.py
vibecheck/: __init__.py  __main__.py  app.py  auth.py  bridge.py  events.py  launcher.py  live_probe.py  tui_bridge.py  ws.py
vibecheck/routes/: api.py  (+1 more)
(+62 files in other folders)
